[package]
name = "pong"
version = "0.1.0"
authors = ["Corrina Sivak <csivak345@gmail.com>"]
edition = "2018"
resolver = "2"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "macos")'.dependencies.amethyst]
version = "0.15"
features = ["metal"]

[target.'cfg(not(target_os = "macos"))'.dependencies.amethyst]
version = "0.15"
features = ["vulkan"]